# control

./: .gitignore  .gitlab-ci.yml  Dockerfile_list.yml  README.md  batch_concat_lane_split_fastqs.py  docker-compose.yml  new_mars.yaml
bioc/: Dockerfile  cloudbuild.yaml  core_bioconductor_packages.R
bioconductor_docker/: Dockerfile
core/: Dockerfile  cloudbuild.yaml  core_packages.R  environment.yml
deimos/: Dockerfile  jupyter_server_config.py  list_of_packages.txt  packages.R  sc.yaml
future-rstudio/: r_packages.R
genetics/: Dockerfile  cloudbuild.yaml  genetics_packages.R
jupyter/: Dockerfile  README.md  docker-start.yml  jupyter.service  jupyter_notebook_config.py  registries.conf
jupyter/adrastea/: .p10k.zsh  .pdm-python  .zshrc  Dockerfile  jupyter_lab_config.py  pyproject.toml  rclone.conf
jupyter/deimos/: .zshrc  Dockerfile  conda.sh  sc.yaml
jupyter/mars/: Dockerfile  cloudbuild.yaml  control.code-workspace
jupyter/metis/: .Rprofile  Dockerfile  constraints.txt  pyproject-poetry.toml  pyproject-rye.toml  pyproject.bak  pyproject.toml
jupyter/metis/dummy/: pyproject.toml
jupyter/metis/dummy/src/dummy/: __init__.py
jupyter/phobos/: .pdm-python  .zshrc  Dockerfile  basic_package_list.yaml  jupyter_server_config.py  pyproject.toml  requirements.txt  sc.yaml  too_big_list_of_packages.txt
mars/: Dockerfile  jupyter_lab_config.py  packages.R  sc.yaml
ml/: cloudbuild.yaml
phobos/: Dockerfile  sc.yaml
powsimr/: Dockerfile  cloudbuild.yaml
rnaseq/: Dockerfile  cloudbuild.yaml  r_packages.R
rnaseq-coder/: cloudbuild.yaml  environment.yml  r_packages.R
rstudio/bioc/: Dockerfile  core_bioconductor_packages.R
rstudio/bioconductor_docker/: cloudbuild.yaml  install.R
rstudio/core/: Dockerfile  cloudbuild.yaml  core_packages.R  pixi.toml  rclone.conf  user-settings
rstudio/future-rstudio/: future-rstudio.def
rstudio/microarray/: Dockerfile  cloudbuild.yaml  ma_packages.R
rstudio/ml/: Dockerfile  cloudbuild.yaml  (+1 more)
singlecell/: Dockerfile  cloudbuild.yaml  scrna_packages.R  scrna_packages2.R  scrna_packages4.R  scrna_packages5.R
singlecell-shiny/: Dockerfile  cloudbuild.yaml
singlecell_futures/: Dockerfile  cloudbuild.yaml  future_packages.R
(+16 files in other folders)
