[project]
name = "adrastea"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Miles Smith", email = "miles-smith@omrf.org"}]
requires-python = ">= 3.11"
dependencies = [ "revseq>=1.0.0,<2", "scirpy>=0.17.2,<0.18", "scrublet>=0.2.3,<0.3", "scvelo", "macs3==3.0.1", "snapatac2==2.6.4", "jupyterlab-execute-time>=3.1.2,<4", "jupyterlab-widgets", "fingerling==1.0.0" ]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
adrastea = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
anndata = ">=0.10.8,<0.11"
cython = ">=3.0.10,<4"
h5py = ">=3.11.0,<4"
igraph = ">=0.10.13,<0.11"
ipython = ">=8.26.0,<9"
ipywidgets = ">=8.1.3,<9"
jax = ">=0.4.28,<0.5"
jupyterlab = ">=4.2.4,<5"
leidenalg = ">=0.10.2,<0.11"
levenshtein = ">=0.25.1,<0.26"
loguru = ">=0.7.2,<0.8"
loompy = ">=3.0.6,<4"
matplotlib = ">=3.9.1,<4"
more-itertools = ">=10.3.0,<11"
mudata = ">=0.2.4,<0.3"
numba = ">=0.60.0,<0.61"
numpy = ">=1.26.4,<2"
pip = ">=24.0,<25"
pytorch = ">=2.3.1,<3"
pytorch-lightning = ">=2.3.3,<3"
python-kaleido = ">=0.2.1,<0.3"
rich = ">=13.7.1,<14"
rpy2 = ">=3.5.11,<4"
scanpy = ">=1.10.2,<2"
scikit-learn = "==1.5.1"
scikit-misc = ">=0.1.4,<0.2"
scipy = ">=1.14.0,<2"
scvi-tools = ">=1.1.5,<2"
statsmodels = ">=0.14.2,<0.15"
tqdm = ">=4.66.4,<5"
umap-learn = ">=0.5.6,<0.6"
widgetsnbextension = ">=4.0.11,<5"
xlrd = ">=2.0.1,<3"
fastparquet = ">=2024.5.0,<2025"
harmonypy = ">=0.0.10,<0.0.11"
muon = ">=0.1.6,<0.2"
tensorflow = ">=2.16.2,<3"
tensorflow-probability = ">=0.24.0,<0.25"
setuptools = ">=71.0.4,<72"
pandas = "==2.1.1"
