[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Miles Smith", email = "mileschristiansmith@gmail.com"},
]
license = {text = "GPL-3.0"}
requires-python = "3.10.14"
name = "dummy"
version = "0.2.0"
description = ""
readme = "README.md"
